--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  overscroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+}
+
 .translate-z-0 {
   transform: translateZ(0px);
 }
@@ -23,7 +30,7 @@
     @apply bg-secondary overflow-hidden leading-relaxed;
   }
   .page {
-    @apply w-full h-screen overflow-hidden;
+    @apply w-screen h-screen overflow-hidden;
   }
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
